manifests/n8n/resources/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`webhook.n8n.vrsf.in`)
      kind: Rule
      services:
        - name: n8n-webhook
          port: 5678
    - match: Host(`n8n.vrsf.in`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
  tls:
    certResolver: letsencrypt
